# spdk

./: Cargo.toml  MSRV.md  README.md  TESTING.md  example-usage.md  justfile  test-compilation.sh
.cargo/: config.toml
backend-blindbit-native/: Cargo.toml  README.md  test-features.sh
backend-blindbit-native-non-async/: Cargo.toml
backend-blindbit-native-non-async/src/: backend.rs  error.rs  lib.rs  thread_pool.rs
backend-blindbit-native-non-async/src/client/: client.rs  http_trait.rs  mod.rs  ureq_impl.rs
backend-blindbit-native/src/: backend.rs  backend_async.rs  error.rs  lib.rs
backend-blindbit-native/src/backend/: backend.rs
backend-blindbit-native/src/client/: client.rs  http_trait.rs  mod.rs  reqwest_impl.rs  structs.rs  ureq_impl.rs
backend-blindbit-native/src/scanner/: mod.rs
backend-blindbit-v1/: Cargo.toml
backend-blindbit-v1/src/: api_structs.rs  backend.rs  client.rs  lib.rs  sync_backend.rs  sync_client.rs
backend-blindbit-wasm/: Cargo.toml  README.md  build.rs
backend-blindbit-wasm/src/: backend.rs  lib.rs
backend-blindbit-wasm/src/backend/: backend.rs  mod.rs
backend-blindbit-wasm/src/backend/blindbit/backend/: backend.rs
backend-blindbit-wasm/src/backend/blindbit/client/: client.rs
backend-blindbit-wasm/src/client/: client.rs  http_trait.rs  mod.rs  reqwest_impl.rs  structs.rs
backend-blindbit-wasm/src/scanner/: mod.rs
backend_tests/blindbit-native/: Cargo.toml
backend_tests/blindbit-native/src/: lib.rs
backend_tests/blindbit-native/tests/: client.rs  scan.rs
backend_tests/blindbit-native_sync/: Cargo.toml
backend_tests/blindbit-native_sync/tests/: integration.rs
bitcoin/: Cargo.toml
bitcoin/src/: lib.rs
blindbit-backend/: Cargo.toml
blindbit-backend/src/: backend.rs  client.rs
blindbit-backend/src/backend/: backend.rs
blindbit-backend/src/client/: client.rs  structs.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  spend.rs  structs.rs
examples/: README.md  http-client.ts  lib.rs  package.json  test-wasm.js
psbt/: Cargo.toml
psbt/src/: lib.rs
psbt/src/core/: error.rs  mod.rs  utils.rs
psbt/src/roles/: constructor.rs  extractor.rs  input_witness_finalizer.rs  mod.rs  signer.rs  updater.rs
psbt/tests/: signer.rs
scanner/: Cargo.toml
scanner/src/: scanner.rs
silentpayments/: Cargo.toml  README.md
silentpayments/examples/: create_wallet.rs  custom_parser.rs  find_output.rs
silentpayments/src/: error.rs  lib.rs  receiving.rs  sending.rs  utils.rs
silentpayments/src/utils/: common.rs  hash.rs  receiving.rs  script.rs  sending.rs
silentpayments/tests/: vector_tests.rs
silentpayments/tests/common/: utils.rs
sp-address/: Cargo.toml
sp-address/src/: lib.rs
sp-client/: Cargo.toml
sp-client/src/: lib.rs
sp-client/src/client/: client.rs  structs.rs
sp-client/src/updater/: updater.rs
sp-descriptor/: Cargo.toml
sp-descriptor/src/: keys.rs  lib.rs
spdk-core/: Cargo.toml
spdk-core/examples/: dleq_example.rs
spdk-core/src/: error.rs  keys.rs  lib.rs  types.rs
spdk-core/src/account/: mod.rs
spdk-core/src/backend/: backend.rs  backend_async.rs  mod.rs  sync_trait.rs
spdk-core/src/chain/: mod.rs  trait.rs
spdk-core/src/client/: client.rs  mod.rs  spend.rs  structs.rs
spdk-core/src/crypto/: mod.rs
spdk-core/src/protocol/: error.rs  mod.rs  receiving.rs  sending.rs  utils.rs
spdk-core/src/protocol/utils/: common.rs  hash.rs  receiving.rs  sending.rs
spdk-core/src/psbt/: mod.rs
spdk-core/src/psbt/core/: error.rs  extensions.rs  mod.rs  shares.rs  types.rs
spdk-core/src/psbt/crypto/: bip352.rs  dleq.rs  signing.rs
spdk-core/src/psbt/helpers/: mod.rs
spdk-core/src/psbt/helpers/wallet/: types.rs
spdk-core/src/psbt/io/: error.rs  file_io.rs
spdk-core/src/psbt/roles/: constructor.rs  creator.rs  extractor.rs  input_finalizer.rs  signer.rs  updater.rs  validation.rs
spdk-core/src/scanner/: logic.rs  mod.rs  scanner.rs  sync_scanner.rs
spdk-core/src/updater/: dummy_updater.rs  mod.rs  structs.rs  trait.rs  updater.rs
spdk-wallet/: Cargo.toml
spdk-wallet/examples/: simple_scanner.rs
spdk-wallet/src/: lib.rs
spdk-wallet/src/client/: bip321.rs  client.rs  coin_select.rs  mod.rs  spend.rs  structs.rs
spdk-wallet/src/scanner/: logic.rs  mod.rs  scanner.rs  sync_scanner.rs
spdk-wallet/tests/: test.rs
spdk-wallet/tests/mock/: chain.rs  mod.rs  updater.rs
spdk-wallet/tests/resources/blocks/200000/: filter-new-utxos.json  filter-spent.json  spent-index.json  tweaks.json  utxos.json
spdk-wallet/tests/resources/blocks/200001/: filter-new-utxos.json  filter-spent.json  spent-index.json  tweaks.json  utxos.json
spdk-wallet/tests/resources/blocks/295125/: filter-new-utxos.json  filter-spent.json  spent-index.json  tweaks.json  utxos.json
spdk-wallet/tests/resources/blocks/295147/: filter-new-utxos.json  filter-spent.json  spent-index.json  tweaks.json  utxos.json
src/: lib.rs  utils.rs
src/backend/: backend.rs  chain_backend.rs  http_client.rs  mod.rs
src/backend/blindbit/: mod.rs
src/backend/blindbit/backend/: backend.rs  mod.rs  native.rs  wasm.rs
src/backend/blindbit/client/: client.rs  mod.rs  native.rs  structs.rs  wasm.rs
src/backend/http_client/: mod.rs  native.rs  wasm.rs
src/client/: client.rs  mod.rs  signing.rs  spend.rs  structs.rs
src/scanner/: mod.rs  scanner.rs
