[workspace]
members = [
    "spdk-core",
    "backend-blindbit-native",
    "backend-blindbit-native-non-async",
]
resolver = "2"

[workspace.dependencies]
# Internal workspace crates
# NOTE: if default-features == true, it cannot be disabled by crates using spdk-core.workspace = true
spdk-core = { path = "spdk-core", version = "0.1.0" , default-features = false}
bitcoin = { path = "bitcoin" }

# Core dependencies - shared across crates
# silentpayments = "0.4"
silentpayments = { git = "https://github.com/pythcoiner/rust-silentpayments.git", branch = "secp_29"}
thiserror = "2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rayon = "1.10.0"
futures = "0.3"
futures-util = "0.3.31"
async-trait = "0.1"
log = "0.4"
hex = { version = "0.4.3", features = ["serde"] }
bdk_coin_select = "0.4.0"
bip39 = { version = "2.2.0" }

[workspace.package]
repository = "https://github.com/cygnet3/spdk"
