[workspace]
members = ["spdk-core", "backend-blindbit-v1", "spdk-wallet", "silentpayments"]
resolver = "3"

[workspace.dependencies]
# Internal workspace crates
spdk-core = { path = "spdk-core" }
silentpayments = { path = "silentpayments"}

# Core dependencies - shared across crates
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bitcoin = { version = "0.32.8", features = ["serde", "rand", "base64"] }
rayon = "1.10.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
hex = { version = "0.4.3", features = ["serde"] }
bdk_coin_select = "0.4.0"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
  "gzip",
], default-features = false }

[workspace.package]
repository = "https://github.com/cygnet3/spdk"
authors = ["cygnet <cygnet3@proton.me>"]
license = "MIT"
