[workspace]
members = ["spdk-core", "backend-blindbit-v1", "spdk-wallet", "silentpayments", "psbt"]
resolver = "3"

[workspace.dependencies]
# Internal workspace crates
spdk-core = { path = "spdk-core" }
silentpayments = { path = "silentpayments" }
backend-blindbit-v1 = { path = "backend-blindbit-v1" }
psbt = { path = "psbt" }

# Core dependencies - shared across crates
anyhow = "1.0"
async-trait = "0.1"
bech32 = "0.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
bitcoin = { version = "0.32.8", features = ["serde", "rand", "base64"] }
bitcoin_hashes = "0.13.0"
rayon = "1.10.0"
itertools = "0.14.0"
futures = "0.3"
log = "0.4"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12"
bdk_coin_select = "0.4.0"
reqwest = { version = "0.12.4", features = [
  "json",
  "rustls-tls",
  "gzip",
], default-features = false }
psbt-v2 = { git = "https://github.com/Sosthene00/rust-psbt.git", branch = "taproot_sign", features = ["silent-payments"] }
rust-dleq = { git = "https://github.com/macgyver13/rust-dleq.git", branch = "master", default-features = false }
rand = { version = "0.8", features = ["std"] }
secp256k1 = { version = "0.29.0" }
sha2 = "0.10"

[workspace.package]
repository = "https://github.com/cygnet3/spdk"
authors = ["cygnet <cygnet3@proton.me>"]
license = "MIT"
