[package]
name = "backend-blindbit-native-non-async"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
# Core client dependency
spdk-core.workspace = true
spdk-core.default-features = false
spdk-core.features = ["sync"]

# TLS support via rustls is required for HTTPS connections to blindbit
ureq = { git = "https://github.com/pythcoiner/ureq.git", branch = "gzip", default-features = false, features = [ "gzip"]}

# Logging
log.workspace = true

# Re-export some core types for convenience
bitcoin.workspace = true
thiserror.workspace = true
silentpayments.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Parallelization
rayon.workspace = true
rayon.optional = true

[dev-dependencies]
blindbitd = { git = "https://github.com/pythcoiner/blindbitd.git" }
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
ureq2 = { package = "ureq", version = "2.12", features = ["gzip"] }
flate2 = "1"
corepc-node = { version = "0.10.0", features = ["download", "29_0"] }
rand = "0.8"

[features]
default = []
rayon = ["dep:rayon", "spdk-core/parallel"]

