[package]
name = "backend-blindbit-native"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
# Core client dependency
spdk-core.workspace = true

# Async and futures
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tokio = { version = "1.0", features = ["rt", "macros"], optional = true }
log.workspace = true

# URL parsing (minimal: ~20KB)
url = "2.5"

# Minimal HTTP client (optional, ~200KB + TLS adds ~600KB)
# TLS support via rustls is required for HTTPS connections to blindbit
ureq = { version = "2.10", default-features = false, features = ["json", "tls"], optional = true }

# Re-export some core types for convenience
bitcoin.workspace = true
anyhow.workspace = true
silentpayments.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

[features]
# Default includes sync mode and minimal HTTP client
default = ["sync", "ureq-client"]

# Sync mode - uses block_on for synchronous API
sync = []

# Async mode - provides async methods for better performance
async = ["tokio"]

# Minimal HTTP client implementation using ureq
ureq-client = ["ureq"]
