[package]
name = "backend-blindbit-v1"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["async"]
async = ["spdk-core/async", "dep:async-trait", "dep:futures", "dep:reqwest"]
sync = ["spdk-core/sync", "dep:ureq"]

[dependencies]
spdk-core = { path = "../spdk-core", default-features = false }

anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.12.4", features = [
  "rustls-tls",
  "gzip",
  "json",
], default-features = false, optional = true }
ureq = { version = "2", features = ["json", "gzip", "tls"], optional = true }
hex = { version = "0.4.3", features = ["serde"] }
