[package]
name = "backend-blindbit-v1"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["async"]
async = ["spdk-core/async", "dep:async-trait", "dep:futures", "dep:reqwest"]
sync = ["spdk-core/sync", "dep:ureq"]

[dependencies]
spdk-core = { workspace = true, default-features = false }

anyhow.workspace = true
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, optional = true }
ureq = { version = "2", features = ["json", "gzip", "tls"], optional = true }
hex.workspace = true
