[package]
name = "backend-blindbit-v1"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
spdk-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
hex.workspace = true
