[package]
name = "backend-blindbit-wasm"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core client dependency
spdk-core.workspace = true

# Async and futures
futures = "0.3"
futures-util = "0.3.31"
async-trait = "0.1"
log.workspace = true

# URL parsing (minimal: ~20KB)
url = "2.5"

# HTTP client - optional, heavy (~1.5MB with rustls + tokio)
# Consumers can opt out and provide their own HttpClient implementation
reqwest = { version = "0.12.4", features = ["gzip", "json"], default-features = false, optional = true }

# WASM-specific dependencies
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"

# Re-export some core types for convenience
bitcoin.workspace = true
anyhow.workspace = true
silentpayments.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

[features]
# Default includes the full-featured reqwest client
default = ["reqwest-client"]

# Include the ReqwestClient implementation
# Disable this if you want to provide your own minimal HttpClient
reqwest-client = ["reqwest"]
