[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
#Bitcoin
bitcoin_31 = { version = "0.31.1", features = ["serde", "rand", "base64"], package = "bitcoin", optional = true}
bitcoin_32 = { version = "0.32.7", features = ["serde", "rand", "base64"], package = "bitcoin", optional = true}

[features]
default = []
31 = ["bitcoin_31"]
32 = ["bitcoin_32"]
