[package]
name = "backend-blindbit-v1"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
spdk-core.workspace = true

log.workspace = true
bitcoin.workspace = true
anyhow.workspace = true
silentpayments.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true

reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "gzip"], default-features = false }
