[package]
name = "silentpayments"
version = "0.5.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/cygnet3/spdk/tree/master/silentpayments"
edition = "2021"
description = "A library for adding BIP352: Silent Payments support to wallets."
keywords = ["bitcoin", "secp256k1"]
readme = "README.md"
exclude = ["tests/resources"]

[lib]
name = "silentpayments"
crate-type = ["lib"]

[features]
default = ["encode", "sending", "receiving"]
encode = ["dep:bech32"]
serde = ["dep:serde"]
sending = ["dep:bitcoin_hashes", "dep:hex", "encode"]
receiving = ["dep:bitcoin_hashes", "dep:hex", "dep:bimap", "serde", "encode"]

[dependencies]
secp256k1.workspace = true
hex = { workspace = true, optional = true }
bech32 = { workspace = true, optional = true }
bimap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
bitcoin_hashes = { workspace = true, optional = true }

[dev-dependencies]
rust-bip39 = { version = "1.0.0", features = ["rand"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
serde_json = "1.0"
