[package]
name = "sp-address"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
secp256k1 = { version = "0.28.1", default-features = false }
serde = { workspace = true, optional = true }
