[package]
name = "spdk-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["async"]
async = ["dep:async-trait", "dep:futures"]
sync = []

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
bitcoin = { version = "0.32.8", features = ["serde", "rand", "base64"] }
futures = { version = "0.3", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
silentpayments = "0.5"
serde_json = "1.0.107"
rayon = "1.10.0"
log = "0.4"
hex = { version = "0.4.3", features = ["serde"], optional = true }
bdk_coin_select = "0.4.0"
