[package]
name = "spdk-core"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["async"]
async = ["dep:async-trait", "dep:futures"]
sync = []

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true, optional = true }
bitcoin.workspace = true
futures = { workspace = true, optional = true }
serde.workspace = true
silentpayments.workspace = true
