[package]
name = "spdk-core"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
 
 [features]
 # Default: both sync and async APIs available, with parallelization
 default = ["dleq-native"]

# DLEQ proof implementation options (mutually exclusive)
# Native: Direct FFI to libsecp256k1 (default, uses vendored secp256k1)
dleq-native = ["rust-dleq/native"]
# Standalone: Pure Rust + rust-secp256k1 (portable)
dleq-standalone = ["rust-dleq/standalone"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitcoin.workspace = true
dnssec-prover.workspace = true
futures.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
silentpayments.workspace = true
psbt-v2.workspace = true
rust-dleq.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
base64.workspace = true
sha2.workspace = true
tempfile.workspace = true